Started adding styling stuff

--- a/index.html
+++ b/index.html
@@ -11,13 +11,89 @@
     <div class="container">
         <div class="survey-slider">
             <div class="questions">
-              <div class="question">
+              <div class="question active">
                 <div class="">
                    <h3>1 of 8</h3>
                    <div class=""></div>
                 </div>
                 <div class="inner-width">
                 <h2 class="heading">What do you think?</h2>
+                <div class="">
+                    <div class="">
+                        <p class="question-tag">Question 1</p>
+                        <h6 class="paragraph">On a scale of 1 to 10, how would you rate the clarity of the course instructions?</h6>
+                    </div>
+                    <div class="button-container">
+                        <div class="flex">
+                            <button class="button" type="button">1</button>
+                            <button class="button" type="button">2</button>
+                            <button class="button" type="button">3</button>
+                            <button class="button" type="button">4</button>
+                            <button class="button" type="button">5</button>
+                            <button class="button" type="button">6</button>
+                            <button class="button" type="button">7</button>
+                            <button class="button" type="button">8</button>
+                            <button class="button" type="button">9</button>
+                            <button class="button" type="button">10</button>
+                        </div>                    
+                        <div class="spread-content">
+                            <p class="">Not Clear at all</p>
+                            <p class="">Neutral</p>
+                            <p class="">Extremely Clear</p>
+                        </div>                     
+                    </div>
+                </div>
+                </div>
+                <div class="spread-content">
+                   <button class="btn prev-btn">Previous</button>
+                   <button class="btn next-btn">Next</button>
+                </div>
+              </div>
+              <div class="question active">
+                <div class="">
+                   <h3>1 of 8</h3>
+                   <div class=""></div>
+                </div>
+                <div class="inner-width">
+                <h2 class="heading">What do you think HUH?</h2>
+                <div class="">
+                    <div class="">
+                        <p class="question-tag">Question 1</p>
+                        <h6 class="paragraph">On a scale of 1 to 10, how would you rate the clarity of the course instructions?</h6>
+                    </div>
+                    <div class="button-container">
+                        <div class="flex">
+                            <button class="button" type="button">1</button>
+                            <button class="button" type="button">2</button>
+                            <button class="button" type="button">3</button>
+                            <button class="button" type="button">4</button>
+                            <button class="button" type="button">5</button>
+                            <button class="button" type="button">6</button>
+                            <button class="button" type="button">7</button>
+                            <button class="button" type="button">8</button>
+                            <button class="button" type="button">9</button>
+                            <button class="button" type="button">10</button>
+                        </div>                    
+                        <div class="spread-content">
+                            <p class="">Not Clear at all</p>
+                            <p class="">Neutral</p>
+                            <p class="">Extremely Clear</p>
+                        </div>                     
+                    </div>
+                </div>
+                </div>
+                <div class="spread-content">
+                   <button class="btn prev-btn">Previous</button>
+                   <button class="btn next-btn">Next</button>
+                </div>
+              </div>
+              <div class="question active">
+                <div class="">
+                   <h3>1 of 8</h3>
+                   <div class=""></div>
+                </div>
+                <div class="inner-width">
+                <h2 class="heading">What do you think HUH?</h2>
                 <div class="">
                     <div class="">
                         <p class="question-tag">Question 1</p>
