Made lot of changes

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                     </div>
                     <div class="button-container">
                         <div class="flex">
-                            <button class="button" type="button">1</button>
-                            <button class="button" type="button">2</button>
-                            <button class="button" type="button">3</button>
-                            <button class="button" type="button">4</button>
-                            <button class="button" type="button">5</button>
-                            <button class="button" type="button">6</button>
-                            <button class="button" type="button">7</button>
-                            <button class="button" type="button">8</button>
-                            <button class="button" type="button">9</button>
-                            <button class="button" type="button">10</button>
+                            <button onclick="SelectOption(0)" class="button option" type="button">1</button>
+                            <button  onclick="SelectOption(1)" class="button option" type="button">2</button>
+                            <button onclick="SelectOption(2)"  class="button option" type="button">3</button>
+                            <button onclick="SelectOption(3)"  class="button option" type="button">4</button>
+                            <button  onclick="SelectOption(4)" class="button option" type="button">5</button>
+                            <button  onclick="SelectOption(5)" class="button option" type="button">6</button>
+                            <button onclick="SelectOption(6)"  class="button option" type="button">7</button>
+                            <button  onclick="SelectOption(7)" class="button option" type="button">8</button>
+                            <button  onclick="SelectOption(8)" class="button option" type="button">9</button>
+                            <button  onclick="SelectOption(9)" class="button option" type="button">10</button>
                         </div>                    
                         <div class="spread-content-length">
-                            <p class="">Not Clear huh at all</p>
+                            <p class="">Not Clear at all</p>
                             <p class="">Neutral</p>
                             <p class="">Extremely Clear</p>
                         </div>                     
@@ -85,10 +85,10 @@
                     </div>
                     <div class="button-container">
                         <div class="flex">
-                            <button class="button" type="button">Did not meet requirements</button>
-                            <button class="button" type="button">Somewhat meet expectations</button>
-                            <button class="button" type="button">Meet expectations</button>
-                            <button class="button" type="button">Exceeded expectations</button>
+                            <button  onclick="SelectOption(10)" class="button option" type="button">Did not meet requirements</button>
+                            <button onclick="SelectOption(11)" class="button option" type="button">Somewhat meet expectations</button>
+                            <button onclick="SelectOption(12)" class="button option" type="button">Meet expectations</button>
+                            <button onclick="SelectOption(13)" class="button option" type="button">Exceeded expectations</button>
                         </div>                                         
                     </div>
                 </div>
@@ -118,11 +118,11 @@
                     </div>
                     <div class="button-container">
                         <div class="flex">
-                            <button class="button" type="button">Very unlikely</button>
-                            <button class="button" type="button">Unlikely</button>
-                            <button class="button" type="button">Neutral</button>
-                            <button class="button" type="button">Likely</button>
-                            <button class="button" type="button">Very likely</button>
+                            <button onclick="SelectOption(14)" class="button option" type="button">Very unlikely</button>
+                            <button onclick="SelectOption(15)" class="button option" type="button">Unlikely</button>
+                            <button onclick="SelectOption(16)" class="button option" type="button">Neutral</button>
+                            <button onclick="SelectOption(17)" class="button option" type="button">Likely</button>
+                            <button onclick="SelectOption(18)" class="button option" type="button">Very likely</button>
                         </div>                                         
                     </div>
                 </div>
@@ -152,9 +152,9 @@
                     </div>
                     <div class="button-container">
                         <div class="flex-no-justify">
-                            <button class="button emoji-flex" type="button">
+                            <button  onclick="SelectOption(19)"class="button emoji-flex" type="button">
                                 <div class="middle"> <p class="emoji-text"> Yes</p> <img class="emoji" src="./assets/thumbsup.svg" alt=""></div> </button>
-                            <button class="button emoji-flex" type="button">
+                            <button onclick="SelectOption(20)" class="button emoji-flex" type="button">
                                 <div class="middle"> <p class="emoji-text"> No</p> <img class="emoji" src="./assets/thumbsdown.svg" alt=""></div> </button>
                             </button>
                         </div>                                         
@@ -186,9 +186,9 @@
                     </div>
                     <div class="button-container">
                         <div class="flex-no-justify">
-                            <button class="button emoji-flex" type="button">
+                            <button onclick="SelectOption(21)"  class="button emoji-flex" type="button">
                                 <div class="middle"> <p class="emoji-text"> Yes</p> <img class="emoji" src="./assets/thumbsup.svg" alt=""></div> </button>
-                            <button class="button emoji-flex" type="button">
+                            <button  onclick="SelectOption(22)" class="button emoji-flex" type="button">
                                 <div class="middle"> <p class="emoji-text"> No</p> <img class="emoji" src="./assets/thumbsdown.svg" alt=""></div> </button>
                             </button>
                         </div>                                         
@@ -220,11 +220,11 @@
                     </div>
                     <div class="button-container">
                         <div class="flex">
-                            <button class="button" type="button">Poor</button>
-                            <button class="button" type="button">Below average</button>
-                            <button class="button" type="button">Average</button>
-                            <button class="button" type="button">Good</button>
-                            <button class="button" type="button">Excellent</button>
+                            <button onclick="SelectOption(23)" class="button" type="button">Poor</button>
+                            <button onclick="SelectOption(24)" class="button" type="button">Below average</button>
+                            <button onclick="SelectOption(25)" class="button" type="button">Average</button>
+                            <button onclick="SelectOption(26)" class="button" type="button">Good</button>
+                            <button onclick="SelectOption(27)" class="button" type="button">Excellent</button>
                         </div>                                         
                     </div>
                 </div>
@@ -254,13 +254,13 @@
                     </div>
                     <div class="button-container">
                         <div class="flex-no-justify">
-                            <button class="button emoji-flex" type="button">
+                            <button onclick="SelectOption(28)" class="button emoji-flex" type="button">
                                 Too Short
                             </button>
-                            <button class="button emoji-flex" type="button">
+                            <button onclick="SelectOption(29)" class="button emoji-flex" type="button">
                                 Just Right
                             </button>
-                            <button class="button emoji-flex" type="button">
+                            <button onclick="SelectOption(30)" class="button emoji-flex" type="button">
                                 Too Long
                             </button>
                         </div>                                         
